Backend/k8s-kiali/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: default
spec:
  hosts:
    - "kiali.pinz.website"
  gateways:
    - pinz-gateway
  http:
    - match:
        - port: 80
          uri:
            prefix: /
      redirect:
        scheme: https
        redirectCode: 301
    - match:
        - port: 443
          uri:
            prefix: /
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
